# sipproxy-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
bpf/: sigproxy_xdp.c
docs/: benchmark-results.md  benchmark.md  config-template.toml  implementation-plan.md  kubernetes-xdp.md  security-plan.md
examples/: active-standby-node1.toml  active-standby-node2.toml  raft-single-node.toml  single-node.toml  three-node-node1.toml  three-node-node2.toml  three-node-node3.toml  three-node.toml
k8s/: sigproxy-deployment.yaml  sigproxy-xdp.yaml
src/: app.rs  config.rs  lib.rs  persistence.rs  serde_u128.rs
src/cluster/: mod.rs  raft.rs
src/ha/: mod.rs
src/proxy/: affinity.rs  geo.rs  metrics.rs  mod.rs  registry.rs  routing.rs  server.rs  threat.rs  xdp.rs
src/sip/: message.rs  mod.rs
tools/: sip_bench.py
