[package]
name = "sigproxy-rs"
version = "0.1.0"
edition = "2024"
description = "Layer-7 SIP proxy with cluster and HA addon boundaries"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["json", "tokio"] }
bytes = "1"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rsipstack = "=0.5.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openraft = { version = "0.9.24", features = ["serde", "storage-v2"] }
socket2 = "0.6.5"
tokio = { version = "1.52.2", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
