[package]
name = "sigproxy-rs"
version = "0.1.0"
edition = "2024"
description = "Layer-7 SIP-aware proxy with active-standby HA boundaries"
license = "MIT"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["json", "tokio"] }
bytes = "1"
clap = { version = "4.6.3", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rsipstack = "=0.5.16"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
socket2 = "0.6.5"
tokio = { version = "1.53.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.14.0"

[dev-dependencies]
tempfile = "3"
